# Lumen

./: .env.example  .gitignore  .gitmodules  .impeccable.md  CLAUDE.md  CODE_INDEX.md  README.md  chat.py  history.py  main.py  memory.py  prompt.py  requirements.txt  启动.bat  启动.sh  启动后端.bat
api/: __init__.py  main.py
api/routes/: __init__.py  authors_note.py  avatar.py  buffer.py  channel.py  character.py  chat.py  chrome_bridge.py  config.py  graph.py  knowledge.py  memories.py  models.py  permissions.py  persona.py  rerank.py  rpg.py  semantic_group.py  session.py  skills.py  system.py  tdb.py  templates.py  theme.py  thinking_clusters.py  worldbook.py  writing.py  writing_chat.py  ws.py  ws_handler.py
characters/: default.json  xiaoming.json
lumen/: __init__.py  agent.py  chat.py  config.py  context.py  history.py  llm.py  memory.py  message_types.py  prompt.py  query.py  tool.py  tools.py
lumen-Front/: README_FRONTEND.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  启动并测试.bat  快速启动前端.bat
lumen-Front/src/: App.tsx  ChatInterface.tsx  main.tsx
lumen-Front/src-tauri/: Cargo.toml  tauri.conf.json
lumen-Front/src-tauri/capabilities/: default.json
lumen-Front/src-tauri/src/: lib.rs  main.rs
scripts/: migrate_knowledge.py
tests/: conftest.py  test_access_control.py  test_context.py  test_embedding_similarity.py  test_graph_community.py  test_graph_dedup.py  test_graph_pipeline_integration.py  test_jieba_similarity.py  test_knowledge_rerank.py  test_permissions_api.py
tool_lib/: registry.json  registry.py
(+531 files in other folders)
